Fix homepage gradients not flipping on mobile They were going horizontally even though the content is vertical

--- a/_sass/variables/_sizing.scss
+++ b/_sass/variables/_sizing.scss
@@ -8,7 +8,7 @@ $page-width: 1000px;
 $max-cont-width: 1200px;
 
 // Breakpoints
-
+$tablet-max-width: 1200px;
 $mobile-max-width:  800px;                    // 800px
 $desktop-min-width: $mobile-max-width + 1;    // 801px
 
